--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 
 <head>
-    <title>Minified CSS Code</title>
+    <title>Woooo, Nature Boy, Ric Flair</title>
     <meta charset='UTF-8'>
     <meta content="width=device-width,initial-scale=1" name=viewport>
 
